<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbarThumbHorizontal="@color/darkGreen"
    android:scrollbarThumbVertical="@color/darkGreen"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/txtCreateUsername"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textview"
        android:breakStrategy="simple"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:textColor="@color/darkGreen"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.423" />

    <EditText
        android:id="@+id/txtCreateEmail"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textview"
        android:breakStrategy="simple"
        android:ems="10"
        android:textColor="@color/darkGreen"
        android:fontFamily="@font/poppins"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateUsername"
        app:layout_constraintVertical_bias="0.047"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtCreatePassword"
        android:layout_width="355dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_textview"
        android:breakStrategy="simple"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/password"
        android:inputType="textEmailAddress"
        android:textColor="@color/darkGreen"
        android:password="true"
        android:textAlignment="center"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateEmail"
        app:layout_constraintVertical_bias="0.07"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textColor="@color/darkGreen"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="49dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:foreground="@drawable/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_your_information_and_create_your_account"
        android:textColor="@color/lightGreen"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreateAcc" />

    <TextView
        android:id="@+id/txtCreateAcc"
        android:layout_width="270dp"
        android:layout_height="48dp"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/poppins"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/darkGreen"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="351dp"
        android:layout_height="42dp"
        android:background="@drawable/rounded_btn_view"
        android:backgroundTintMode="add"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCreatePassword"
        app:layout_constraintVertical_bias="0.134" />

</androidx.constraintlayout.widget.ConstraintLayout>